tests/negative/non_exhaustive_union.glyph
module neg

type Feed =
  | A
  | B
  | C

fn handle(f: Feed) -> number {
  return match f {
    A => 1,
  }
}
